--- a/index.css
+++ b/index.css
@@ -1,5 +1,5 @@
 .column1 {
-  padding-left: 20px;
+  padding-left: 80px;
   float: left;
   width: 33.33%;
 }
@@ -10,6 +10,7 @@
 }
 
 .column3 {
+  padding-right: 80px;
   float: right;
   width: 33.33%;
 }
